--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-  <img style="width: 200px;" src="images/logo.jpg1" alt="Logo">
+  <img style="width: 200px;" src="images/logo.jpg" alt="Logo">
   <div class="options">
     <a href="https://pitchcatalyst.com/differentiator">Differentiator</a>
     <a href="https://pitchcatalyst.com/how-it-works">Procedure</a>
